--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,11 @@ MESSAGE( " *** OpenCV_INCLUDE_DIRS : " ${OpenCV_INCLUDE_DIRS} )
 MESSAGE( " *** OpenCV_LIB_DIRS : " ${OpenCV_LIB_DIRS} )
 MESSAGE( " *** OpenCV_LIBS : " ${OpenCV_LIBS} )
 
+include_directories(${PYTHON_INCLUDE_DIRS})
+include_directories(${OpenCV_INCLUDE_DIRS})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pybind11/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/)
+
 include_directories(${OpenCV_INCLUDE_DIRS})
 LINK_DIRECTORIES(
   ${OpenCV_LIB_DIR}
